# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["metriki-core",
           "metriki-influxdb-reporter",
           "metriki-log-reporter",
           "metriki-macros",
           "metriki-prometheus-exporter",
           "metriki-riemann-reporter",
           "metriki-statsd-reporter",
           "metriki-warp"]
