# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["metriki-core",
           "metriki-influxdb-reporter",
           "metriki-jemalloc",
           "metriki-log-reporter",
           "metriki-macros",
           "metriki-otlp-reporter",
           "metriki-prometheus-exporter",
           "metriki-r2d2",
           "metriki-riemann-reporter",
           "metriki-statsd-reporter",
           "metriki-tower",
           "metriki-tracing",
           "metriki-warp"]
