# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["metriki-core",
           "metriki-influxdb-reporter",
           "metriki-jemalloc",
           "metriki-log-reporter",
           "metriki-macros",
           "metriki-prometheus-exporter",
           "metriki-r2d2",
           "metriki-riemann-reporter",
           "metriki-statsd-reporter",
           "metriki-tokio",
           "metriki-tower",
           "metriki-tracing",
           "metriki-warp"]
