[package]
name = "metriki-core"
version = "1.2.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "A metrics library ported from dropwizard metrics"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-core/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"
hdrhistogram = "7"
serde = { version = "1", optional = true }

[features]
default = []
ser = ["serde"]

[dev-dependencies]
rand = "0.8"
