[package]
name = "metriki-core"
version = "1.7.2"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "A metrics library ported from dropwizard metrics"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-core/"
readme = "../README.md"

[dependencies]
crossbeam-utils = "0.8"
hdrhistogram = { version = "7", default-features = false, features = [] }
lazy_static = "1"
dashmap = "5.0"

# optionals
## serialization
serde = { version = "1", optional = true }

## macros
metriki-macros = { version = "1", path = "../metriki-macros", optional = true }

[features]
default = []
ser = ["serde"]
macros = ["metriki-macros"]

[dev-dependencies]
rand = "0.8"
threadpool = "1"

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
