[package]
name = "metriki-influxdb-reporter"
version = "0.1.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#metriki-core = { path = "../metriki-core", version = "0.1.2-alpha.0"}
metriki-core = "0.1.1"
influxdb = "0.3"
derive_builder = "0.9.0"
futures = { version = "0.3", features = ["executor"]}
