[package]
name = "metriki-influxdb-reporter"
version = "0.1.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metriki-core = { path = "../metriki-core", version = "0.1.2-alpha.0"}
influxdb = { version = "0.4", features = ["curl-client"], default-features = false }
derive_builder = "0.9.0"
futures = { version = "0.3", features = ["executor"]}
log = "0.4"
