[package]
name = "metriki-jemalloc"
version = "0.1.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Metriki integration for jemalloc"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "memory"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-jemalloc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-jemalloc-ctl = "0.5"
metriki-core = { path = "../metriki-core", version = "^1.0"}

[dev-dependencies]
tikv-jemallocator = "0.4"
metriki-log-reporter = { path = "../metriki-log-reporter", version = "0.1" }
env_logger = "0.9"
