[package]
name = "metriki-log-reporter"
version = "0.1.1-alpha.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Log reporter for metriki"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
metriki-core = { path = "../metriki-core", version = "0.1.1-alpha.0" }
derive_builder = "0.9.0"
