[package]
name = "metriki-log-reporter"
version = "0.1.4"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Log reporter for metriki"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-log-reporter/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
metriki-core = { path = "../metriki-core", version = "^1.0"}
#metriki-core = "0.1.1"
derive_builder = "0.11.1"
