[package]
name = "metriki-macros"
version = "1.0.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Macros for metriki"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-macros/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
metriki-core = { path = "../metriki-core", version = "^1.0"}

[lib]
proc-macro = true
