[package]
name = "metriki-prometheus-exporter"
version = "0.1.1"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Prometheus exporter/reporter for metriki"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "prometheus"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-prometheus-exporter/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13"
metriki-core = { path = "../metriki-core", version = "^1.0"}
derive_builder = "0.10.2"
log = "0.4"
tiny_http = "0.11"
