
[package]
name = "metriki-riemann-reporter"
version = "0.1.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metriki-core = { path = "../metriki-core", version = "0.1.2-alpha.0"}
rustmann = "0.7"
derive_builder = "0.9.0"
log = "0.4"
hostname = "0.3"
lazy_static = "1"
tokio = { version = "1", features = ["rt", "time"] }
