[package]
name = "metriki-riemann-reporter"
version = "0.1.1"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Riemann reporter for metriki"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "riemann"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-riemann-reporter/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metriki-core = { path = "../metriki-core", version = "^1.0"}
rustmann = "0.7"
derive_builder = "0.11.2"
log = "0.4"
hostname = "0.3"
lazy_static = "1"
tokio = { version = "1", features = ["rt", "time"] }
