[package]
name = "metriki-statsd-reporter"
version = "0.1.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Statsd reporter for metriki"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "statsd"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-influxdb-reporter/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metriki-core = { path = "../metriki-core", version = "1"}
cadence = "0.25"
derive_builder = "0.9.0"
log = "0.4"
