[package]
name = "metriki-statsd-reporter"
version = "0.1.1"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Statsd reporter for metriki"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "statsd"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-statsd-reporter/"
readme = "../README.md"

[dependencies]
metriki-core = { path = "../metriki-core", version = "1"}
cadence = "0.28"
derive_builder = "0.10.2"
log = "0.4"
