[package]
name = "metriki-tokio"
version = "0.2.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Metriki integration for tokio metrics"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "tokio"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-tokio/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-metrics = { version = "0.3" }
metriki-core = { path = "../metriki-core", version = "^1.7" }
derive_builder = "0.20"

[dev-dependencies]
metriki-log-reporter = { path = "../metriki-log-reporter", version = "0.2" }
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"]}

[features]
default = []
rt = ["tokio-metrics/rt"]
