[package]
name = "metriki-tracing"
version = "0.2.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Metriki as a subscriber of tracing"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "tracing"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-tracing/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
metriki-core = { path = "../metriki-core", version = "^1.7"}

[dev-dependencies]
metriki-log-reporter = { path = "../metriki-log-reporter", version = "0.2" }
env_logger = "0.10"
