[package]
name = "metriki-warp"
version = "0.1.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
edition = "2018"
description = "Metriki integration with warp"
license = "MIT/Apache-2.0"
keywords = ["observability", "metrics", "monitoring", "warp"]
homepage = "https://github.com/sunng87/metriki"
repository = "https://github.com/sunng87/metriki"
documentation = "https://docs.rs/metriki-warp/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3", default-features = false }
metriki-core = { path = "../metriki-core", version = "^0.1.2-alpha.0"}
